--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
     </header>
 
     <section class="about">
+        <canvas class="orb-canvas" id="orb-canvas"></canvas>
         <div class="about__info animate__animated animate__fadeInLeft animate__slow">
             <h1>Солнечные панели GreenRobotic</h1>
             <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -165,5 +166,6 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
 </footer>
 
     <script src="fa/js/all.min.js"></script>
+    <script src="js/canvas.js"></script>
 </body>
 </html>
