Шестая версия проекта

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
             <h2>
                 Нам доверяет
                 <br>
-                5000+ счастливых клиентов
+                <div class="features__clients-count">5000+</div> счастливых клиентов
             </h2>
             <p>
                 Мы помогли тысячам людей перейти на зеленую энергию.
@@ -167,5 +167,6 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
 
     <script src="fa/js/all.min.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 </html>
