--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
         </div>
     </section>
 
-    <section class="form">
-        <div class="form__container">
+    <section class="form" id="form">
+        <div class="form__containter">
             <h1>Оставьте свои контакты</h1>
             <p>Поможем подобрать модель. <br>Выбрать удобный вариант доставки и установки. <br>Гарантия возврата денег.</p>
             <form>
@@ -130,7 +130,7 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
                     <option value="10-30">10 000₽ – 30 000₽</option>
                     <option value="30-60">30 000₽ – 60 000₽</option>
                     <option value="30-100">60 000₽ – 100 000₽</option>
-                    <option value="100+">100 000₽</option>
+                    <option value="other">Другое</option>
                 </select>
                 </div>
                 <button type="submit" class="form__submit">Отправить заявку</button>
